@startuml


class Equipe {
	- nome : String
	- descricao : String
	- dataFundacao : Date
	- numMembros : int
	+ toString()
	+ infoToSave()
}

class Personagem {
	- nome : String
	- dataCriacao : Date
	- raca : String
	- classe : String
	+ toString()
	+ infoToSave()
	+ setAtributos()
}

class Equipamento {
	- nome : String
	- nivel : int
	- peso : float
	+ toString()
	+ infoToSave()
	# setAtributos()
}

class Arma {
	- tipo : String
	- dano : int
	- material : String
	+ toString()
	+ infoToSave()
	+ setAtributos()

}

class Armadura {
	- tipo : String
	- defesa : int
	- material : String
	+ toString()
	+ infoToSave()
	+ setAtributos()
}

class Consumivel {
	- efeito : bool
	- qntUso : int
	- status : int
	+ toString()
	+ infoToSave()
	+ setAtributos()
}

left to right direction
Personagem "1" -- "0..*" Equipamento
skinparam groupInheritance 3
Equipamento <|-- Arma
Equipamento <|-- Armadura
Equipamento <|-- Consumivel
Equipe "1" -up- "1..*" Personagem
@enduml